fix: download transition, state simplifications, better download errors
